# Data-Pilot

./: .env.example  .gitignore  README.md  agent_runtime.py  main.py  pyproject.toml  requirements.txt
cli/: art.py  cli.py  ui.py  v0.py  v0_1.py  v1.py  v2.py
config/: agent_config.py  agent_personality.py  mem0_config.py  rag_config.py
my_agents/: __init__.py  base_agent.py
my_agents/analysis_agent/: __init__.py  agent.py  prompt.py
my_agents/context_memory_agent/: __init__.py  agent.py  prompt.py
my_agents/filesystem_agent/: __init__.py  agent.py  prompt.py
my_agents/ideation_agent/: __init__.py  agent.py  prompt.py
my_agents/memory_agent/: agent.py  prompt.py
my_agents/study_agent/: __init__.py  agent.py  prompt.py
my_agents/triage_agent/: __init__.py  agent.py  prompt.py
my_agents/web_search_agent/: agent.py  prompt.py
tools/: __init__.py  automation_tools.py  computer.py  context_manager_tools.py  data_tools.py  filesystem_tools.py  mem0_tools.py  misc_tools.py  search_tools.py  web_tools.py
tools/utils/: DuckDuckGoSearch.py  SearxSearch.py  YoutubeSearch.py  code_execution.py  context_manager.py  dataset_utils.py  download.py  filesystem.py  mem0_memory.py  research.py  researchv1.py  scraper.py  weather.py
