[project]
name = "DS_Agent"
version = "1.3.0"
description = "An AI assistant that can walk around the internet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.2",
    "browserforge==1.2.3",
    "chromadb==1.1.1",
    "crawl4ai==0.7.4",
    "ddgs==9.5.0",
    "fake-useragent==2.2.0",
    "groq==0.32.0",
    "html2text==2025.4.15",
    "litellm==1.77.7",
    "markdown==3.9",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "openai==1.109.1",
    "openai-agents==0.3.3",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "rich>=14.1.0",
    "spider-rs==0.0.57",
    "statsmodels==0.14.4",
    "yt-dlp==2025.9.5",
    "docling==2.55.1",
    "easyocr==1.7.2",
]
